--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Moving Ball</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,7 +17,7 @@
 <body>
 
     <div class="container mt-3">
-        <h1>Simple ball moving dom manipulation</h1>
+        <h1 id="h1">Simple ball moving dom manipulation</h1>
         <div id="canvas" class="m-auto">
             <div id='ball'></div>
         </div>
@@ -44,8 +44,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
 
-
     <script src="./dist/bundle.js"></script>
+
+
 </body>
 
 </html>
